--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,10 +14,10 @@ circle-ci = { repository = "Hirevo/epitech-api-rs", branch = "master" }
 maintenance = { status = "actively-developed" }
 
 [dependencies]
-reqwest = "*"
-chrono = "*"
-serde = "*"
-serde_derive = "*"
-serde_json = "*"
-hyper = "*"
-lazy_static = "*"
+reqwest = "^0.8.6"
+chrono = "^0.4.4"
+serde = "^1.0.67"
+serde_derive = "^1.0.68"
+serde_json = "^1.0.22"
+hyper = "^0.11.27"
+lazy_static = "^0.2.11"
