--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,22 +1,26 @@
 [package]
 name = "epitech_api"
-version = "0.1.18"
+version = "0.2.0"
 edition = "2018"
 authors = ["Nicolas Polomack <nicolas@polomack.eu>"]
-description = "A library for interacting with the EPITECH intranet API built on top of reqwest"
-readme = "README.md"
-keywords = ["epitech", "api", "web", "intranet"]
-categories = ["web-programming", "api-bindings"]
+description = "A library for interacting with the EPITECH intranet API"
+keywords = ["epitech", "api", "web", "intranet", "async"]
+categories = ["web-programming", "api-bindings", "asynchronous"]
 repository = "https://github.com/Hirevo/epitech-api-rs"
-license = "MIT"
+documentation = "https://docs.rs/epitech_api"
+license = "MIT OR Apache-2.0"
 
 [badges]
-maintenance = { status = "actively-developed" }
+maintenance = { status = "passively-maintained" }
 
 [dependencies]
-reqwest = { version = "0.9.22" }
-chrono = { version = "0.4.9" }
-serde = { version = "1.0.101", features = ["derive"] }
-json = { package = "serde_json", version = "1.0.41" }
-thiserror = { version = "1.0.1" }
-enum-iterator = { version = "0.5.0" }
+reqwest = "0.10.1"
+chrono = "0.4.10"
+serde = { version = "1.0.104", features = ["derive"] }
+json = { package = "serde_json", version = "1.0.44" }
+thiserror = "1.0.9"
+enum-iterator = "0.5.0"
+
+[dev-dependencies]
+tokio = { version = "0.2.9", features = ["macros"] }
+futures = "0.3.1"
